--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack"
+    
+
   },
   "devDependencies": {
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   }
