--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "less-loader": "^11.0.0",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
+    "vue-loader": "^17.0.0",
+    "vue-template-compiler": "^2.6.14",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2"
